force-app/main/default/objects/Written_Round_1_Question__c/Written_Round_1_Question__c.object-meta.xml
<CustomObject>
    <label>Written Round (1) Question</label>
    <nameField>
        <displayFormat>WQ-{00000}</displayFormat>
        <label>Written Round (1) Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Written Round (1) Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>