force-app/main/default/objects/Written_Round_1_Question__c/fields/Option_1__c.field-meta.xml
<CustomField>
    <fullName>Option_1__c</fullName>
    <label>Option 1</label>
    <type>TextArea</type>
</CustomField>