force-app/main/default/objects/Written_Round_1_Question__c/fields/Option_2__c.field-meta.xml
<CustomField>
    <fullName>Option_2__c</fullName>
    <label>Option 2</label>
    <type>TextArea</type>
</CustomField>