force-app/main/default/objects/Written_Round_1_Question__c/fields/Option_3__c.field-meta.xml
<CustomField>
    <fullName>Option_3__c</fullName>
    <label>Option 3</label>
    <type>TextArea</type>
</CustomField>