force-app/main/default/objects/Written_Round_1_Question__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <length>32627</length>
    <type>LongTextArea</type>
</CustomField>