force-app/main/default/objects/Written_Round_1_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Category__c</columns>
    <columns>Question__c</columns>
    <columns>Option_1__c</columns>
    <columns>Option_2__c</columns>
    <columns>Option_3__c</columns>
    <columns>Option_4__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>